Fix Login card styles on Safari and simplify (TODO: further simplify)

--- a/merry/src/App/Login/Login.scss
+++ b/merry/src/App/Login/Login.scss
@@ -21,6 +21,11 @@
 
   background-color: white;
 
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
   @include drop-shadow(0.1);
 
   @include for-phone-only {
@@ -30,34 +35,32 @@
   }
 }
 
-.formCard {
-  display: grid;
-  grid-template: 'logo' 100px 'prompt' auto 'form' 146px 'error' auto / auto;
-
-  justify-items: center;
-  align-items: center;
-}
-
-.extendedFormCard {
-  grid-template: 'logo' 100px 'prompt' auto 'form' 200px 'error' auto / auto;
-}
-
 .switchCard {
   width: auto;
   padding: 15px 25px;
   margin-top: 25px;
 
+  background-color: white;
+
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
   justify-content: center;
 
+  @include drop-shadow(0.1);
+
   @include for-phone-only {
+    width: calc(100% - 50px);
     margin-top: 0;
+
+    @include drop-shadow(0);
   }
 }
 
 .logo {
   grid-area: logo;
 
-  height: 100%;
+  height: 100px;
 }
 
 .prompt {
@@ -86,5 +89,9 @@
   text-align: center;
   color: $error;
 
-  padding-top: 25px;
+  margin-top: 15px;
+}
+
+.spacing {
+  margin: 5px 0;
 }
